--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
